[project]
name = "sassy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
    "polars>=1.23.0",
    "pytest>=8.3.4",
    "ruff>=0.9.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
